--- a/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-radio-group.css
+++ b/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-radio-group.css
@@ -1,11 +1,10 @@
 @theme inline {
-  --color-radio-group-item-control-bg-hover: var(--color-highlight);
-  --color-radio-group-item-control-border-hover: var(--color-border-primary);
-  --color-radio-group-item-control-border-subtle-checked: var(--color-primary);
-  --color-radio-group-item-control-border-hover: var(--color-border-primary);
+  --color-radio-group-item-bg-hover: var(--color-highlight);
+  --color-radio-group-item-border-hover: var(--color-border-primary);
+  --color-radio-group-item-border-subtle-checked: var(--color-primary);
 
-  --gap-radio-group-items-horizontal-sm: var(--spacing-500);
+  --spacing-radio-group-stack-horizontal-sm: var(--spacing-500);
 
-  --spacing-radio-group-control-sm: 0.875rem;
-  --spacing-radio-group-indicator-sm: 0.75rem;
+  --size-radio-group-control-sm: 0.875rem;
+  --size-radio-group-indicator-sm: 0.75rem;
 }
