--- a/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-search-form.css
+++ b/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-search-form.css
@@ -1,10 +1,10 @@
 @theme static {
   --radius-search-form-md: 0.625rem;
-  --padding-search-form-clear-button: var(--spacing-200);
+  --spacing-search-form-clear-button: var(--spacing-200);
 
   --color-form-control-bg: var(--color-surface);
   --color-form-control-border: var(--color-border-secondary);
   --color-form-control-border-hover: var(--color-border-primary);
   --color-form-control-border-focus: var(--color-primary);
-  --color-form-control-placeholder: var(--color-fg-placeholder);
+  --color-form-control-fg-placeholder: var(--color-fg-placeholder);
 }
